--- a/css/main.css
+++ b/css/main.css
@@ -633,7 +633,7 @@ img {
 }
 
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.18;
@@ -643,10 +643,23 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .team__title {
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .person-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .person-list {
+    display: flex;
   }
 }
 
@@ -656,8 +669,25 @@ img {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.person-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .person-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .person-list__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .person-list__item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .person-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .person-list__div {
@@ -714,49 +744,93 @@ img {
 }
 
 .company {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .company {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .company__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--title-color);
 }
+@media screen and (min-width: 1200px) {
+  .company__title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+}
 
 .logo-company-list {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
-.logo-company-list__item:not(:last-child) {
-  margin-right: 30px;
+.logo-company-list__item {
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.logo-company-list__item:hover, .logo-company-list__item:focus {
+  border: 1px solid #2196f3;
+}
+@media screen and (max-width: 767px) {
+  .logo-company-list__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .logo-company-list__item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .logo-company-list__item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .logo-company-list__item:not(:nth-last-child(-n+3)) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo-company-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .logo-company-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.logo-company-list__link:hover, .logo-company-list__link:focus {
-  border: 1px solid #2196f3;
 }
 
 .logo-company-list__icon {
-  width: 170px;
+  width: 210px;
   height: 92px;
   fill: #afb1b8;
 }
 .logo-company-list__link:hover .logo-company-list__icon, .logo-company-list__link:focus .logo-company-list__icon {
   fill: #2196f3;
+}
+@media screen and (min-width: 768px) {
+  .logo-company-list__icon {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .logo-company-list__icon {
+    width: 170px;
+  }
 }
 
 .footer {
