--- a/sass/layout/main/_company.scss
+++ b/sass/layout/main/_company.scss
@@ -1,35 +1,36 @@
 .company {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .company__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @include font(700, 28px, 1.18);
 
-  @include font(700, 36px, 1.17);
-  // font-weight: 700;
-  // font-size: 36px;
-  // line-height: 1.17;
   text-align: center;
 
   color: var(--title-color);
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+
+    @include font(700, 36px, 1.17);
+  }
 }
 
 .logo-company-list {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  // justify-content: center;
+  // align-items: center;
 }
 
-.logo-company-list__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.logo-company-list__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+.logo-company-list__item {
   border: 1px solid #afb1b8;
   border-radius: 4px;
 
@@ -39,10 +40,39 @@
   &:focus {
     border: 1px solid $primary-color;
   }
+
+  @media screen and (max-width: 767px) {
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (max-width: 1199px) {
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
+.logo-company-list__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo-company-list__icon {
-  width: 170px;
+  width: 210px;
   height: 92px;
 
   fill: #afb1b8;
@@ -50,5 +80,13 @@
   .logo-company-list__link:hover &,
   .logo-company-list__link:focus & {
     fill: $primary-color;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 170px;
   }
 }
