--- a/sass/layout/main/_team.scss
+++ b/sass/layout/main/_team.scss
@@ -11,8 +11,7 @@
 }
 
 .team__title {
-  margin-bottom: 50px;
-
+  margin-bottom: 30px;
   @include font(700, 28px, 1.18);
 
   text-align: center;
@@ -20,12 +19,20 @@
   color: var(--title-color);
 
   @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+
     @include font(700, 36px, 1.17);
   }
 }
 
 .person-list {
-  // display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .person-list__item {
@@ -36,8 +43,31 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  // &:not(:last-child) {
+  //   margin-right: 30px;
+  // }
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (max-width: 1199px) {
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
