--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -523,19 +523,53 @@ img {
   padding-bottom: 60px;
   background-color: var(--background-color);
 }
-.footer .conteiner {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 1200px) {
+  .footer .conteiner {
+    display: flex;
+    align-items: baseline;
+  }
 }
-.footer__logo-address {
-  margin-right: 70px;
+@media screen and (min-width: 1200px) {
+  .footer__logo-address {
+    margin-right: 70px;
+  }
 }
+
+@media screen and (min-width: 768px) {
+  .footer-logo-address-soc {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer-logo-address-soc {
+    margin-bottom: 60px;
+    padding-right: 89px;
+    padding-left: 76px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-logo-address-soc {
+    margin-right: 93px;
+  }
+}
+
 .footer__logo {
   display: inline-block;
   margin-bottom: 20px;
 }
+
 .footer__studio {
   color: #ffffff;
+}
+
+.footer__logo-address {
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .footer__logo-address {
+    margin-bottom: 60px;
+  }
 }
 
 .address {
@@ -543,7 +577,12 @@ img {
 }
 
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .address__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .address__maps {
@@ -564,11 +603,17 @@ img {
 }
 
 .footer-soc {
-  margin-right: 93px;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-soc {
+    margin-top: 12px;
+  }
 }
 
 .footer-soc__list {
   display: flex;
+  justify-content: center;
 }
 
 .footer-soc__title {
@@ -600,11 +645,15 @@ img {
   background-color: #2196f3;
 }
 
+.footer-subscribe {
+  text-align: center;
+}
+
 .footer-subscribe__title {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.88;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
@@ -614,9 +663,13 @@ img {
   display: flex;
   align-items: center;
 }
+@media screen and (max-width: 1199px) {
+  .footer-subscribe__form {
+    flex-direction: column;
+  }
+}
 
 .footer-subscribe__input {
-  margin-right: 12px;
   padding-left: 16px;
   width: 358px;
   height: 50px;
@@ -625,6 +678,16 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+}
+@media screen and (max-width: 1199px) {
+  .footer-subscribe__input {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-subscribe__input {
+    margin-right: 12px;
+  }
 }
 
 .footer-subscribe__telegram {
