--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,21 +5,48 @@
   background-color: var(--background-color);
 
   .conteiner {
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      align-items: baseline;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &__logo-address {
+      margin-right: 70px;
+    }
+  }
+}
+
+.footer-logo-address-soc {
+  @media screen and (min-width: 768px) {
     display: flex;
-    align-items: baseline;
+    justify-content: space-between;
   }
-
-  &__logo-address {
-    margin-right: 70px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+    padding-right: 89px;
+    padding-left: 76px;
   }
-
-  &__logo {
-    display: inline-block;
-    margin-bottom: 20px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
   }
+}
 
-  &__studio {
-    color: #ffffff;
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.footer__studio {
+  color: #ffffff;
+}
+
+.footer__logo-address {
+  text-align: center;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
   }
 }
 
@@ -28,7 +55,11 @@
 }
 
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 9px;
+  }
 }
 
 .address__maps {
@@ -45,11 +76,16 @@
 }
 
 .footer-soc {
-  margin-right: 93px;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 12px;
+  }
 }
 
 .footer-soc__list {
   display: flex;
+  justify-content: center;
 }
 
 .footer-soc__title {
@@ -87,10 +123,14 @@
   }
 }
 
+.footer-subscribe {
+  text-align: center;
+}
+
 .footer-subscribe__title {
   margin-bottom: 20px;
 
-  @include font(700, $lh: 1.14);
+  @include font(700, $lh: 1.88);
   // font-weight: 700;
   // font-size: 14px;
   // line-height: 1.14;
@@ -102,10 +142,13 @@
 .footer-subscribe__form {
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+  }
 }
 
 .footer-subscribe__input {
-  margin-right: 12px;
   padding-left: 16px;
   width: 358px;
   height: 50px;
@@ -115,6 +158,14 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 12px;
+  }
 }
 
 .footer-subscribe__telegram {
