--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,10 @@ img {
   color: var(--header-list-address-hover-color);
 }
 
+.mob-menu-list__link.link.current {
+  color: var(--header-list-address-hover-color);
+}
+
 .logo {
   font-family: "Raleway", "sans-serif";
   font-weight: 700;
