--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -423,18 +423,27 @@ img {
 }
 
 .hero-portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .hero-portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .catalog-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .catalog-list__item:not(:last-child) {
   margin-right: 8px;
+}
+.catalog-list__item:nth-child(-n+3) {
+  margin-bottom: 15px;
 }
 
 .catalog-list__btn {
