--- a/sass/layout/portfolio/_hero-portfolio.scss
+++ b/sass/layout/portfolio/_hero-portfolio.scss
@@ -1,16 +1,28 @@
 .hero-portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .catalog-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  // justify-content: center;
+  // margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
-.catalog-list__item:not(:last-child) {
-  margin-right: 8px;
+.catalog-list__item {
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
+  &:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
 }
 
 .catalog-list__btn {
