--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -439,12 +439,25 @@ img {
   flex-wrap: wrap;
   margin-bottom: 40px;
 }
+@media screen and (min-width: 768px) {
+  .catalog-list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .catalog-list {
+    margin-bottom: 50px;
+  }
+}
 
 .catalog-list__item:not(:last-child) {
   margin-right: 8px;
 }
-.catalog-list__item:nth-child(-n+3) {
-  margin-bottom: 15px;
+@media screen and (max-width: 767px) {
+  .catalog-list__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
 }
 
 .catalog-list__btn {
@@ -469,41 +482,47 @@ img {
 .skills-list {
   display: flex;
   flex-wrap: wrap;
-  max-width: 450px;
 }
 
 .skills-list__item {
   background-color: #eeeeee;
 }
-@media screen and (max-width: 767px) {
-  .skills-list__item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
 @media screen and (min-width: 768px) {
   .skills-list__item {
     width: 354px;
   }
+}
+@media screen and (max-width: 1199px) {
   .skills-list__item:not(:nth-child(2n)) {
     margin-right: 30px;
   }
-}
-@media screen and (max-width: 1199px) {
-  .skills-list__item:not(:nth-last-child(-n+2)) {
+  .skills-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .skills-list__item:not(:last-child) {
+  .skills-list__item {
+    width: 370px;
+  }
+  .skills-list__item:not(:nth-child(3n)) {
     margin-right: 30px;
+  }
+  .skills-list__item:not(:nth-last-child(-n+3)) {
+    margin-bottom: 30px;
   }
 }
 
 .skills-list__link {
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .skills-list__link:hover, .skills-list__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+@media screen and (max-width: 767px) {
+  .skills-list__link {
+    max-width: 450px;
+  }
 }
 
 .skills-list__thumb {
