--- a/sass/layout/portfolio/_hero-portfolio.scss
+++ b/sass/layout/portfolio/_hero-portfolio.scss
@@ -11,17 +11,27 @@
 .catalog-list {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: center;
-  // margin-bottom: 50px;
   margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .catalog-list__item {
   &:not(:last-child) {
     margin-right: 8px;
   }
-  &:nth-child(-n + 3) {
-    margin-bottom: 15px;
+
+  @media screen and (max-width: 767px) {
+    &:nth-child(-n + 3) {
+      margin-bottom: 15px;
+    }
   }
 }
 
@@ -55,7 +65,6 @@
 .skills-list {
   display: flex;
   flex-wrap: wrap;
-  max-width: 450px;
 }
 
 .skills-list__item {
@@ -68,33 +77,38 @@
   // &:not(:nth-child(3n)) {
   //   margin-right: 30px;
   // }
-  @media screen and (max-width: 767px) {
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
-  }
+  // @media screen and (max-width: 767px) {
+  //   &:not(:last-child) {
+  //     margin-bottom: 30px;
+  //   }
+  // }
 
   @media screen and (min-width: 768px) {
     width: 354px;
-    &:not(:nth-child(2n)) {
-      margin-right: 30px;
-    }
   }
 
   @media screen and (max-width: 1199px) {
-    &:not(:nth-last-child(-n + 2)) {
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+    &:not(:last-child) {
       margin-bottom: 30px;
     }
   }
 
   @media screen and (min-width: 1200px) {
-    &:not(:last-child) {
+    width: 370px;
+    &:not(:nth-child(3n)) {
       margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
     }
   }
 }
 
 .skills-list__link {
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
@@ -102,6 +116,14 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+
+  @media screen and (max-width: 767px) {
+    max-width: 450px;
+  }
+
+  // @media screen and (min-width: 768px) {
+  //   width: 354px;
+  // }
 }
 
 .skills-list__thumb {
