--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -513,7 +513,10 @@ img {
 }
 
 .skills-list__link {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .skills-list__link:hover, .skills-list__link:focus {
@@ -544,7 +547,7 @@ img {
   letter-spacing: 0.03em;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .skills-list__link:hover .skills-list__hover-text, .skills-list__link:focus .skills-list__hover-text {
@@ -552,6 +555,7 @@ img {
 }
 
 .skills-list__description {
+  flex-grow: 1;
   padding: 20px 24px;
   background-color: #ffffff;
   border: 1px solid #eeeeee;
