--- a/sass/layout/main/_hero.scss
+++ b/sass/layout/main/_hero.scss
@@ -11,7 +11,7 @@
   max-height: 400px;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../../images/hero-mob@1.jpg);
+    url(../../../images/Hero-mob@1.jpg);
   background-repeat: no-repeat;
   // background-size: contain;
   background-position: center;
@@ -19,7 +19,7 @@
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../../images/hero-mob@2.jpg');
+      url('../../../images/Hero-mob@2.jpg');
   }
 
   @media screen and (min-width: 768px) {
@@ -27,7 +27,7 @@
     max-height: 400px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-tab@1.jpg);
+      url(../images/Hero-tab@1.jpg);
     background-size: 768px 400px;
 
     // background-size: cover;
@@ -36,7 +36,7 @@
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../../images/hero-tab@2.jpg');
+        url('../../../images/Hero-tab@2.jpg');
     }
   }
   @media screen and (min-width: 1200px) {
@@ -45,14 +45,14 @@
     max-height: 600px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-desk@1.jpg);
+      url(../images/Hero-desk@1.jpg);
     background-size: 1600px 600px;
     // background-size: contain;
     // background-repeat: no-repeat;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../../images/hero-desk@2.jpg');
+        url('../../../images/Hero-desk@2.jpg');
     }
   }
 }
