--- a/sass/layout/portfolio/_hero-portfolio.scss
+++ b/sass/layout/portfolio/_hero-portfolio.scss
@@ -108,7 +108,10 @@
 }
 
 .skills-list__link {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
@@ -149,7 +152,7 @@
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
 
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .skills-list__link:hover &,
@@ -159,6 +162,7 @@
 }
 
 .skills-list__description {
+  flex-grow: 1;
   padding: 20px 24px;
 
   background-color: #ffffff;
