--- a/sass/layout/main/_hero.scss
+++ b/sass/layout/main/_hero.scss
@@ -11,7 +11,7 @@
   max-height: 400px;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../../images/Hero-mob@1.jpg);
+    url(../images/Hero-mob@1.jpg);
   background-repeat: no-repeat;
   // background-size: contain;
   background-position: center;
@@ -19,7 +19,7 @@
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../../images/Hero-mob@2.jpg');
+      url('../images/Hero-mob@2.jpg');
   }
 
   @media screen and (min-width: 768px) {
@@ -36,7 +36,7 @@
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../../images/Hero-tab@2.jpg');
+        url('../images/Hero-tab@2.jpg');
     }
   }
   @media screen and (min-width: 1200px) {
@@ -52,7 +52,7 @@
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../../images/Hero-desk@2.jpg');
+        url('../images/Hero-desk@2.jpg');
     }
   }
 }
