--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -537,7 +537,9 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  overflow: auto;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
@@ -599,14 +601,12 @@ img {
 @media screen and (min-width: 768px) {
   .footer-logo-address-soc {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 @media screen and (max-width: 1199px) {
   .footer-logo-address-soc {
     margin-bottom: 60px;
-    padding-right: 89px;
-    padding-left: 76px;
   }
 }
 @media screen and (min-width: 1200px) {
