--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -21,12 +21,10 @@
 .footer-logo-address-soc {
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   @media screen and (max-width: 1199px) {
     margin-bottom: 60px;
-    padding-right: 89px;
-    padding-left: 76px;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 93px;
