--- a/sass/layout/main/_hero.scss
+++ b/sass/layout/main/_hero.scss
@@ -1,25 +1,20 @@
 .hero {
-  background-color: var(--background-color);
-  // padding-top: 200px;
-  // padding-bottom: 200px;
   padding: 118px 0;
   margin-right: auto;
   margin-left: auto;
-  // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  //   url(../images/Hero-Img.jpg);
   max-width: 480px;
   max-height: 400px;
 
+  background-color: var(--background-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero-mob@1.jpg);
+    url(../images/hero/hero-mob@1.jpg);
   background-repeat: no-repeat;
-  // background-size: contain;
   background-position: center;
   background-size: 480px 400px;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../images/hero-mob@2.jpg');
+      url('../images/hero/hero-mob@2.jpg');
   }
 
   @media screen and (min-width: 768px) {
@@ -27,7 +22,7 @@
     max-height: 400px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-tab@1.jpg);
+      url(../images/hero/hero-tab@1.jpg);
     background-size: 768px 400px;
 
     // background-size: cover;
@@ -36,7 +31,7 @@
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/hero-tab@2.jpg');
+        url('../images/hero/hero-tab@2.jpg');
     }
   }
   @media screen and (min-width: 1200px) {
@@ -45,14 +40,14 @@
     max-height: 600px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-desk@1.jpg);
+      url(../images/hero/hero-desk@1.jpg);
     background-size: 1600px 600px;
     // background-size: contain;
     // background-repeat: no-repeat;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/hero-desk@2.jpg');
+        url('../images/hero/hero-desk@2.jpg');
     }
   }
 }
