--- a/sass/layout/portfolio/_hero-portfolio.scss
+++ b/sass/layout/portfolio/_hero-portfolio.scss
@@ -140,7 +140,9 @@
   top: 0;
   left: 0;
 
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  overflow: auto;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
